tests/rosetta/out/Smalltalk/concurrent-computing-3.out
/tmp/concurrent-computing-3.st:6: parse error, expected ']'
